# nate

./: .gitignore  Cargo.toml  README.md
.github/actions/setup-rust/: action.yaml
.github/workflows/: checks.yml  ci.yml  devskim-analysis.yml
nate/: Cargo.toml  LICENSE-APACHE  README.md
nate-common/: Cargo.toml  README.md
nate-common/src/: details.rs  lib.rs  raw_marker.rs
nate-derive/: Cargo.toml  LICENSE-ISC  README.md  build.rs
nate-derive/src/: compile_error.rs  generate.rs  input.rs  lib.rs  parse.rs  span_data.rs  strip.rs
nate-derive/src/nate_span/: inner.rs  mod.rs  outer.rs
nate-tests/: Cargo.toml  LICENSE  LICENSE-APACHE.md  LICENSE-MIT
nate-tests/templates/: 99-bottles-implicit-braces.html  99-bottles.html  closing-brace-in-data.html  custom-escaper.html  escaping.html  greeting-raw.html  greeting.html  include-2.html  include-3.html  include.html  test.css
nate-tests/tests/: 99-bottles.rs  css.rs  custom-escaper.rs  escaping.rs  greeting-generics.rs  greeting.rs  include.rs  non-zero.rs  regression-testing.rs
nate/src/: details.rs  escape.rs  fast_float.rs  fast_integer.rs  lib.rs  raw.rs  raw_marker.rs  render.rs
