[package]
name = "nate-common"
version = "0.1.6"
edition = "2018"
authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
license = "ISC OR MIT OR Apache-2.0"
description = "Helper functions for NaTE"
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"
