[package]
name = "nate-common"
version = "0.1.9"
edition = "2021"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "Apache-2.0"
description = "Helper functions for NaTE"
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"

[features]
default = ["std"]
alloc = []
doc_cfg = []
std = ["alloc"]
