[package]
name = "nate-common"
version = "0.1.10"
edition = "2018"
# rust-version = "1.54"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "Apache-2.0"
description = "Helper functions for NaTE"
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"

[dependencies]
# optional features:
document-features = { version = "=0.1.0", optional = true }

[features]
default = ["std", "alloc"]
## disable [`#![no_std]`](https://docs.rust-embedded.org/book/intro/no-std.html), implies `alloc`
##
std = ["alloc"]
## enable features found in the [alloc](https://doc.rust-lang.org/stable/alloc/) crate, e.g. std::io::Write
##
alloc = []

# Internal feature, used when generating docs. *You* are not supposed to enable this feature!
docsrs = ["document-features"]

[package.metadata.docs.rs]
features = ["alloc", "std", "docsrs"]
