[package]
name = "nate-derive"
version = "0.3.3"
edition = "2018"
# rust-version = "1.53"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Proc-macros for NaTE"
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
blake2 = "=0.10"
darling = ">= 0.12, <= 0.14"
hex = "=0.4"
nom = "=7"
nom_locate = "4.0.0"
quote = { version = "=1", default-features = false }
syn = { version = "=2", default-features = false }

[features]
default = []

# Internal feature, used when generating docs. *You* are not supposed to enable this feature!
docsrs = ["default"]

[package.metadata.docs.rs]
features = ["docsrs"]
