[package]
name = "nate-derive"
version = "0.4.0"
edition = "2021"
rust-version = "1.56"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Proc-macros for NaTE"
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
blake2 = "=0.10"
darling = ">= 0.12, <= 0.14"
hex = "=0.4"
nom = "=7"
nom_locate = "4.0.0"
quote = { version = "=1", default-features = false }
syn = { version = "=1", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
