[package]
name = "nate"
version = "0.2.2"
edition = "2018"
# rust-version = "1.53"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Not a Template Engine. Derive Display using a template."
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"

[dependencies]
nate-derive = { path = "../nate-derive", version = "0.2.1", default-features = false }

[features]
default = ["std", "alloc"]
## disable [`#![no_std]`](https://docs.rust-embedded.org/book/intro/no-std.html), implies `alloc`
std = ["alloc"]
## enable features found in the [alloc](https://doc.rust-lang.org/stable/alloc/) crate, e.g. std::io::Write
alloc = []
