[package]
name = "nate"
version = "0.4.0"
edition = "2021"
rust-version = "1.56"
authors = ["René Kijewski <crates.io@k6i.de>"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Not a Template Engine. Derive Display using a template."
homepage = "https://github.com/Kijewski/nate"
repository = "https://github.com/Kijewski/nate"
categories = ["template-engine"]
keywords = ["html", "template", "no-std"]
readme = "README.md"

[dependencies]
nate-derive = { path = "../nate-derive", version = "0.4.0" }

itoa = "=1"
ryu = "=1.0"

[features]
default = ["std"]
## disable [`#![no_std]`](https://docs.rust-embedded.org/book/intro/no-std.html), implies `alloc`
std = ["alloc"]
## enable features found in the [alloc](https://doc.rust-lang.org/stable/alloc/) crate, e.g. std::io::Write
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
